log
Sun 12 Mar 2023 12:14:18 AM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|6
total_score: 10/70
20b4c50
Thu 16 Mar 2023 03:40:10 PM UTC: 
 exercises.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|5
total_score: 20/70
8a2948d
Thu 16 Mar 2023 03:57:05 PM UTC: 
 exercises.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  2|5
total_score: 20/70
6370d30
Thu 16 Mar 2023 03:58:12 PM UTC: 
 exercises.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  3|4
total_score: 30/70
e21d948
Thu 16 Mar 2023 08:15:45 PM UTC: 
 exercises.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
5e8f6a6
Thu 16 Mar 2023 08:18:10 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:84:10: error: assignment to ‘Vector *’ from incompatible pointer type ‘struct Vector *’ [-Werror=incompatible-pointer-types]
   84 |   arreglo=(struct Vector*) calloc(n,sizeof(Vector));
      |          ^
cc1: all warnings being treated as errors
Compilation failed
aab72e1
Thu 16 Mar 2023 08:18:33 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
f933b6f
Thu 16 Mar 2023 08:32:55 PM UTC: 
 exercises.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
225d57b
Thu 16 Mar 2023 08:34:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
6574567
Thu 16 Mar 2023 08:35:35 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:88:5: error: ignoring return value of ‘scanf’ declared with attribute ‘warn_unused_result’ [-Werror=unused-result]
   88 |     scanf("%i",&arreglo[i].capacidad);
      |     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
772a1fc
Thu 16 Mar 2023 08:36:54 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
10a5e5a
Thu 16 Mar 2023 08:43:25 PM UTC: 
 exercises.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:102:8: error: incompatible types when assigning to type ‘Vector’ from type ‘int’
  102 |   v[i]=valor;
      |        ^~~~~
Compilation failed
35136e2
